--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -158,6 +158,7 @@
   .carousel .switch > ul > li {
     width: 10px;
     height: 10px;
+    -webkit-border-radius: 50%;
     border-radius: 50%;
     background: #333;
     float: left;
@@ -168,6 +169,7 @@
   .carousel .on {
     width: 100%;
     height: 100%;
+    -webkit-border-radius: 50%;
     border-radius: 50%;
     background: #ff3300;
     position: relative;
@@ -308,6 +310,7 @@
 
 .info {
   border: 2px solid #ff9900;
+  -webkit-border-radius: 5px;
   border-radius: 5px;
   margin-top: 8px;
   background-color: #FFF; }
@@ -393,6 +396,7 @@
   background-color: #1e293e;
   line-height: 42px;
   height: 42px;
+  -webkit-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
   font-size: 18px;
   padding-left: 20px; }
@@ -559,6 +563,7 @@
   table-layout: fixed;
   border-spacing: 0;
   text-align: center;
+  -webkit-border-radius: 20px;
   border-radius: 20px;
   margin-bottom: 15px; }
   .fixtures .header {
@@ -569,6 +574,7 @@
       background-color: #4a7fb3; }
     .fixtures .header .date {
       width: 60px;
+      -webkit-border-radius: 5px 0 0;
       border-radius: 5px 0 0;
       text-align: left; }
       .fixtures .header .date i {
@@ -604,6 +610,7 @@
       width: 86px; }
     .fixtures .header .marketCount {
       width: 50px;
+      -webkit-border-radius: 0 5px 0 0;
       border-radius: 0 5px 0 0;
       cursor: pointer; }
       .fixtures .header .marketCount .fa-caret-down {
@@ -685,6 +692,7 @@
     cursor: pointer;
     border: none;
     background: none;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box; }
   .betslip > .header {
     height: 46px;
@@ -695,8 +703,10 @@
       font-weight: bold;
       color: #497d92; }
       .betslip > .header .tab:nth-child(1) {
+        -webkit-border-top-left-radius: 6px;
         border-top-left-radius: 6px; }
       .betslip > .header .tab:nth-child(2) {
+        -webkit-border-top-right-radius: 6px;
         border-top-right-radius: 6px; }
       .betslip > .header .tab.selected {
         color: #FFF;
@@ -714,6 +724,7 @@
     color: #99ccff;
     height: 40px; }
     .betslip > .content .header .tab:first-child {
+      -webkit-border-radius: 5px 0 0 0;
       border-radius: 5px 0 0 0; }
     .betslip > .content .header .tab {
       padding: 0 0 0 15px;
@@ -763,6 +774,7 @@
         font-size: 12px;
         background-color: #607d8b;
         border: none;
+        -webkit-border-radius: 4px;
         border-radius: 4px;
         padding: 2px 4px; }
     .betslip > .content .bets .row .event {
@@ -830,6 +842,7 @@
         font-size: 12px;
         background-color: #607d8b;
         border: none;
+        -webkit-border-radius: 4px;
         border-radius: 4px;
         padding: 2px 4px; }
     .betslip > .content .multiFooter .profit {
@@ -871,6 +884,7 @@
   font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
   background-color: #1e293e;
   line-height: 42px;
+  -webkit-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
   font-size: 18px;
   padding-left: 20px; }
@@ -907,6 +921,7 @@
   border-spacing: 0;
   text-align: center;
   border: 1px solid #4a7fb3;
+  -webkit-border-radius: 0;
   border-radius: 0;
   font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
@@ -940,6 +955,7 @@
   border-spacing: 0;
   text-align: center;
   border: 1px solid #4a7fb3;
+  -webkit-border-radius: 0;
   border-radius: 0;
   font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
@@ -973,6 +989,7 @@
   border-spacing: 0;
   text-align: center;
   border: 1px solid #4a7fb3;
+  -webkit-border-radius: 0;
   border-radius: 0;
   font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
@@ -1006,6 +1023,7 @@
   border-spacing: 0;
   text-align: center;
   border: 1px solid #4a7fb3;
+  -webkit-border-radius: 0;
   border-radius: 0;
   font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
@@ -1048,6 +1066,7 @@
   border-spacing: 0;
   text-align: center;
   border: 1px solid #4a7fb3;
+  -webkit-border-radius: 0;
   border-radius: 0;
   font-family: "Open Sans", "Droid Sans", sans-serif;
   font-size: 14px; }
@@ -1093,6 +1112,7 @@
       font-size: 14px; }
 
 .menuLive ul li:first-child .sport:first-child {
+  -webkit-border-radius: 0 5px 0 0;
   border-radius: 0 5px 0 0; }
 
 .menuLive .sport {
@@ -1168,8 +1188,10 @@
   height: 46px;
   margin-bottom: 8px; }
   .sportsMenu-box.header button:nth-child(1) {
+    -webkit-border-top-left-radius: 6px;
     border-top-left-radius: 6px; }
   .sportsMenu-box.header button:nth-child(2) {
+    -webkit-border-top-right-radius: 6px;
     border-top-right-radius: 6px; }
 
 .sportsMenu-tab {
@@ -1199,6 +1221,7 @@
   line-height: 40px;
   cursor: pointer;
   color: #99ccff;
+  -webkit-border-radius: 0 5px 0 0;
   border-radius: 0 5px 0 0; }
   .sportsMenu-interval .header .expand {
     float: right;
