--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -191,28 +191,24 @@ nav {
     vertical-align: top;
 
     .active {
-      a, a:hover {
+      a, a:hover, a:focus {
         color: @navbar-color-active;
         background-color: transparent;
       }
-      a {
-        color: @navbar-color-active;
-      }
     }
     li {
-      a {
-        &:active:focus {
-          background-color: transparent;
-          outline: none;
-        }
+      a, a:focus {
+        font-family: @font-exo;
+        background-color: transparent;
+        color: @navbar-color;
+        font-size: 16px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        outline: none;
+
         &:hover {
           color: @navbar-color-active;
         }
-
-        color: @navbar-color;
-        font-size: 14px;
-        font-weight: bold;
-        letter-spacing: 1px;
       }
     }
 
@@ -286,8 +282,8 @@ nav {
     background-color: @input-background-color;
   }
   .btn-login-sub {
-    background-color: #efd83c;
-    color: #000000;
+    background-color: #ff9900;
+    color: #fff;
     border: 1px solid #000000;
     font-size: 10px;
     padding: 5px 0px;
