--- a/resources/assets/sass/global/_variables.scss
+++ b/resources/assets/sass/global/_variables.scss
@@ -16,6 +16,9 @@ $color-dark-blue: #2d415c;
 $color-green: #71aa30;
 $color-green-hover: lighten($color-green, 10%);
 
+$color-orange: #ff9900;
+$color-orange-hover: lighten($color-orange, 10%);
+
 $color-text-box: #999999;
 $color-text-box-hover: lighten($color-text-box, 10%);
 
