--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -81,6 +81,9 @@ nav {
     .nav-onscroll {
       display: none;
     }
+    .nav-onscroll {
+      float: left;
+    }
     .nav-ontop {
       padding-right: 20px;
       input {
@@ -187,7 +190,7 @@ nav {
   }
   .navbar-nav {
     display: inline-block;
-    float: left;
+    float: right;
     vertical-align: top;
 
     .active {
