--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -101,14 +101,14 @@ button:focus {
   text-align: left;
   float: right;
   width: 50%;
-  padding: 0 10px; }
+  padding-left: 8px; }
 
 .user-time {
   float: left;
   text-align: right;
   color: #ff9900;
   width: 50%;
-  padding: 0 10px; }
+  padding-right: 10px; }
   .user-time .fa {
     font-size: 14px;
     padding-right: 5px; }
