ref #99: Fix menu on scroll down.

--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1335,7 +1335,7 @@
 .bs-wp #saveLoginForm .btn-link {
   font-size: 10px;
   padding: 14px 0 0 15px;
-  color: #cccccc;
+  color: #ff9900;
 }
 .bs-wp #saveLoginForm .btn-link:hover {
   color: #ffffff;
