--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -315,7 +315,7 @@ nav {
   .btn-link {
     font-size: 10px;
     padding: 14px 0 0 15px;
-    color: @right-menu-color;
+    color: @color-orange;
     &:hover {
       color: @navbar-color;
       text-decoration: none;
