--- a/resources/assets/sass/global/global.scss
+++ b/resources/assets/sass/global/global.scss
@@ -50,6 +50,10 @@ button:focus {
     height: 30px;
     line-height: 30px;
   }
+  .sa-input-error {
+    top: 22px;
+  }
+
   button {
     margin-top: 5px;
   }
