--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -159,6 +159,9 @@ nav {
       }
     }
   }
+  .btn-slim:focus {
+    color: @color-white;
+  }
 
   @media (max-width: @screen-lg-max) {
     .navbar-fright {
