--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -5,11 +5,6 @@
   border: 2px solid #ff9900;
   border-radius: $border-radius;
 
-  i {
-    opacity: 0.4 !important;
-    filter: alpha(opacity=50) !important; /* For IE8 and earlier */
-  }
-
   .title {
     font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
     line-height: 40px;
@@ -103,6 +98,7 @@
               border: 1px solid black;
               border-radius: $border-radius;
               width: 100%;
+              padding-right: 20px;
             }
             input[type="checkbox"] {
 
@@ -116,6 +112,7 @@
               min-width: 50px;
               background-color: #FFF;
               width: 100%;
+              padding-right: 20px;
             }
             span {
               line-height: initial;
@@ -230,9 +227,15 @@
           line-height: 40px;
         }
         span {
-          position: absolute;
           bottom: 0;
+          display: block;
           left: 0;
+          position: absolute;
+          text-align: center;
+          width: 100%;
+        }
+        .fa-refresh {
+          opacity: 0.4;
         }
       }
     }
