--- a/public/assets/portal/css/sports.css
+++ b/public/assets/portal/css/sports.css
@@ -300,7 +300,7 @@
   color: #99ccff;
   height: 40px;
   line-height: 40px;
-  margin: 8px 0 14px;
+  margin: 0 0 14px;
   padding: 0 15px;
   white-space: nowrap;
   overflow: hidden;
@@ -314,7 +314,7 @@
   border-radius: 5px;
   background-color: #FFF; }
   .info .header {
-    line-height: 45px;
+    line-height: 40px;
     font-size: 18px;
     font-weight: bold;
     padding: 0 20px;
