--- a/resources/assets/sass/breadcrumb/breadcrumb.scss
+++ b/resources/assets/sass/breadcrumb/breadcrumb.scss
@@ -6,7 +6,7 @@
     color: #99ccff;
     height: 40px;
     line-height: 40px;
-    margin: 8px 0 14px;
+    margin: 0 0 14px;
     padding: 0 15px;
     white-space: nowrap;
     overflow: hidden;
