--- a/public/assets/portal/css/app.css
+++ b/public/assets/portal/css/app.css
@@ -220,7 +220,7 @@ button:focus {
     font-family: "Exo 2", "Open Sans", "Droid Sans", sans-serif;
     font-size: 16px;
     font-weight: bold;
-    height: 44px;
+    height: 40px;
     line-height: 40px;
     padding: 0 20px;
     vertical-align: middle; }
@@ -1362,20 +1362,21 @@ button:focus {
     line-height: 40px;
     vertical-align: middle;
     font-size: 18px;
-    height: 44px;
+    height: 40px;
     color: #FFF;
     background-color: #ff9900;
     padding: 0px 20px; }
     .register .title i {
       float: right;
-      line-height: 44px;
+      line-height: 40px;
       margin-left: 15px; }
       .register .title i .fa-times {
         font-size: 18px; }
-    .register .title i:hover {
-      cursor: pointer; }
+      .register .title i:hover {
+        cursor: pointer;
+        color: #cccccc; }
   .register > .content {
-    padding: 8px;
+    padding: 8px 8px 0;
     background-color: white; }
     .register > .content .header {
       font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
@@ -1391,6 +1392,10 @@ button:focus {
       .register > .content > .row > .column {
         width: 50%;
         float: left; }
+        .register > .content > .row > .column:nth-child(1) {
+          padding-right: 5px; }
+        .register > .content > .row > .column:nth-child(2) {
+          padding-left: 5px; }
         .register > .content > .row > .column > .row {
           line-height: 30px;
           overflow-y: auto;
@@ -1442,11 +1447,9 @@ button:focus {
               float: left; }
     .register > .content .bs-wp {
       padding: 0 16px; }
-      .register > .content .bs-wp .col-xs-3,
-      .register > .content .bs-wp .col-xs-4,
-      .register > .content .bs-wp .col-xs-5,
-      .register > .content .bs-wp .col-xs-6 {
-        padding: 0 7px; }
+      .register > .content .bs-wp .col-xs-1, .register > .content .bs-wp .col-xs-2, .register > .content .bs-wp .col-xs-3,
+      .register > .content .bs-wp .col-xs-4, .register > .content .bs-wp .col-xs-5, .register > .content .bs-wp .col-xs-6 {
+        padding: 0 5px; }
       .register > .content .bs-wp label {
         font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
         font-size: 11px;
@@ -1475,6 +1478,8 @@ button:focus {
         .register > .content .bs-wp .agreement .fa-exclamation-circle,
         .register > .content .bs-wp .agreement .fa-check-circle {
           margin-left: 5px; }
+        .register > .content .bs-wp .agreement label {
+          margin: 0; }
   .register .fa-exclamation-circle,
   .register .fa-check-circle {
     font-size: 16px;
@@ -1486,10 +1491,8 @@ button:focus {
     color: green; }
   .register > .footer {
     overflow: auto;
-    padding: 12px;
     background-color: white;
-    padding-bottom: 15px;
-    padding-left: 16px; }
+    padding: 0 12px 15px 16px; }
     .register > .footer .captcha {
       width: 60%; }
       .register > .footer .captcha * {
