--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -10,7 +10,7 @@
     line-height: 40px;
     vertical-align: middle;
     font-size: 18px;
-    height:44px;
+    height:40px;
 
     color: #FFF;
     background-color: #ff9900;
@@ -18,21 +18,22 @@
 
     i {
       float: right;
-      line-height: 44px;
+      line-height: 40px;
       margin-left: 15px;
-
 
       .fa-times {
         font-size: 18px;
       }
-    }
-    i:hover{
-      cursor:pointer;
+
+      &:hover {
+        cursor: pointer;
+        color: $color-white-hover;
+      }
     }
   }
 
   >.content {
-    padding: 8px;
+    padding: 8px 8px 0;
     background-color: white;
 
     .header {
@@ -52,6 +53,13 @@
       > .column {
         width: 50%;
         float: left;
+
+        &:nth-child(1) {
+          padding-right: 5px;
+        }
+        &:nth-child(2) {
+          padding-left: 5px;
+        }
 
         > .row {
           line-height: 30px;
@@ -126,11 +134,9 @@
     .bs-wp {
       padding: 0 16px;
 
-      .col-xs-3,
-      .col-xs-4,
-      .col-xs-5,
-      .col-xs-6 {
-        padding: 0 7px;
+      .col-xs-1, .col-xs-2, .col-xs-3,
+      .col-xs-4, .col-xs-5, .col-xs-6 {
+        padding: 0 5px;
       }
       label {
         font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
@@ -164,6 +170,9 @@
         .fa-check-circle {
           margin-left: 5px;
         }
+        label {
+          margin: 0;
+        }
       }
     }
   }
@@ -184,10 +193,8 @@
 
   >.footer {
     overflow: auto;
-    padding: 12px;
     background-color:white;
-    padding-bottom:15px;
-    padding-left:16px;
+    padding: 0 12px 15px 16px;
 
     .captcha {
       * {
