--- a/resources/assets/sass/profile/_bank.scss
+++ b/resources/assets/sass/profile/_bank.scss
@@ -2,9 +2,21 @@
 
 .deposit {
   .amount label,
-  .icons label {
-    color: $color-text-box;
+  .icons .choice {
+    label {
+      color: $color-text-box;
+      line-height: 40px;
+      height: 40px;
+      margin-bottom: 0;
+    }
+    .check {
+      top: 12px;
+    }
+    img {
+      height: 40px;
+    }
   }
+
   .amount {
     padding-top: 10px;
   }
