--- a/resources/assets/sass/register/register.scss
+++ b/resources/assets/sass/register/register.scss
@@ -308,9 +308,10 @@
       .fa-times {
         font-size: 18px;
       }
-    }
-    i:hover {
-      cursor: pointer;
+      &:hover {
+        color: $color-white-hover;
+        cursor: pointer;
+      }
     }
   }
 
@@ -360,8 +361,7 @@
       padding-right: 70px;
       text-align: center;
 
-
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-sans;
       font-size: 16px;
       color: #666666;
 
@@ -373,7 +373,7 @@
       padding-bottom: 10px;
       font-weight:bold;
 
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-sans;
       font-size: 18px;
       color: #ff9900;
 
@@ -387,16 +387,14 @@
   }
 
   > .footer {
-    overflow: auto;
-    padding: 12px;
     background-color: white;
-    padding-bottom: 15px;
-    padding-left: 16px;
+    padding: 15px;
 
     .actions {
+      padding-top: 15px;
       button {
 
-        font-family: 'Exo 2', 'Open Sans', 'Droid Sans', sans-serif;
+        font-family: $font-exo;
         font-weight: bold;
         font-size: 15px;
         color: #FFF;
@@ -441,22 +439,25 @@
       .fa-times {
         font-size: 18px;
       }
-    }
-    i:hover {
-      cursor: pointer;
+
+      &:hover {
+        cursor: pointer;
+        color: $color-white-hover;
+      }
     }
   }
 
   .content {
     padding: 8px;
     background-color: white;
-    font-family: 'Open Sans', 'Droid Sans', sans-serif;
+
+      font-family: $font-sans;
 
     .center {
       padding: 0 30px;
     }
     .title {
-      font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
+      font-family: $font-sans;
       text-align: center;
       font-weight: bold;
       color: #666;
@@ -469,23 +470,40 @@
 
     .fa {
       font-size: 1.5em;
-      padding-top: 40px;
+      padding-top: 20px;
       color: #4b802a;
     }
 
     .message {
       text-align: center;
 
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+      font-family: $font-sans;
       font-size: 16px;
       color: #666666;
+      padding: 10px 0;
     }
     .icons {
       font-size: 12px;
+      padding: 5px 20px;
+
+      .choice {
+        label {
+          color: $color-text-box;
+          line-height: 40px;
+          height: 40px;
+          margin-bottom: 0;
+        }
+        .check {
+          top: 12px;
+        }
+        img {
+          height: 40px;
+        }
+      }
     }
 
     .field {
-      padding: 10px 0;
+      padding: 10px 8px;
       font-size: 13px;
       color: #666;
 
@@ -520,14 +538,16 @@
       text-align: center;
       font-weight: bold;
 
-      font-family: 'Open Sans', 'Droid Sans', sans-serif;
+
+      font-family: $font-sans;
       font-size: 18px;
       color: #666666;
     }
 
     .actions {
       button {
-        font-family: 'Open Sans', 'Droid Sans', sans-serif;
+
+      font-family: $font-sans;
         font-weight: bold;
         font-size: 15px;
         color: #FFF;
