--- a/resources/assets/sass/page-footer/page-footer.scss
+++ b/resources/assets/sass/page-footer/page-footer.scss
@@ -1,78 +1,83 @@
+@import "../global/variables";
+
 .page-footer {
-    background-color: #1e293e;
-    padding: 30px 0;
+  background-color: #1e293e;
+  padding: 30px 0;
+  width: 100%;
 
-    a { cursor: pointer}
+  a {
+    cursor: pointer;
+  }
 
-    .content {
-        width: 1200px;
-        height: 300px;
-        margin: 0 auto;
-        padding: 10px 15px;
+  .content {
+    width: 1200px;
+    height: 300px;
+    margin: 0 auto;
+    padding: 10px 15px;
 
-        .menu {
-            height: 85px;
+    .menu {
+      height: 85px;
 
-            .social {
-                float: left;
-                width: 30%;
-                height: 80px;
-                padding: 20px 0 0;
+      .social {
+        float: left;
+        width: 30%;
+        height: 80px;
+        padding: 20px 0 0;
 
-                a {
-                    margin-right: 25px;
-                }
-            }
+        a {
+          margin-right: 25px;
+        }
+      }
 
-            .links {
-                float: left;
-                width: 40%;
+      .links {
+        float: left;
+        width: 40%;
 
-                >div {
-                    float: left;
-                    width: 33%;
-                    line-height: 26px;
-                    padding-left: 20px;
+        > div {
+          float: left;
+          width: 33%;
+          line-height: 26px;
+          padding-left: 20px;
 
-                    a {
-                        font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-                        font-size: 12px;
-                        color: #99ccff;
-                    }
-                }
-            }
+          a {
+            font-family: $font-sans;
+            font-size: 12px;
+            color: #99ccff;
+          }
+        }
+      }
 
-            .icons {
-                float: left;
-                width: 30%;
-                height: 80px;
-                text-align: right;
-                padding: 20px 10px 0 0;
+      .icons {
+        float: left;
+        width: 30%;
+        height: 80px;
+        text-align: right;
+        padding: 20px 10px 0 0;
 
-                a {
-                    margin-left: 30px;
-                }
-
-            }
+        a {
+          margin-left: 30px;
         }
 
-        p {
-            font-family: 'Open Sans', 'Droid Sans', Verdana, sans-serif;
-            font-size: 11px;
-            color: #fff;
-            padding-right: 10px;
-        }
-
-        .copyright {
-            float: left;
-            width: 50%;
-        }
-
-        .payments{
-            width: 50%;
-            float: left;
-            text-align: right;
-
-        }
+      }
     }
+
+    p {
+      font-family: $font-sans;
+      font-size: 11px;
+      color: #fff;
+      padding-right: 10px;
+    }
+
+    .copyright {
+      float: left;
+      width: 50%;
+    }
+
+    .payments {
+      width: 50%;
+      float: left;
+      text-align: right;
+
+    }
+  }
 }
